# feature-store-iceberg

./: Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
anomaly_files/: multiple_users.json  single_user.json
notebooks/: explore_data.ipynb
sql/: gapfilled_7day_spend.sql
src/: anomaly_detector.py  catalog.py  data_generator.py  feature_engineer.py  feature_store.py
tests/integration/: conftest.py  test_anomaly_debug.py  test_time_travel.py
