[project]
name = "feature-store-iceberg"
version = "0.1.0"
description = "Machine learning feature store for an anomaly detection system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "faker>=37.6.0",
    "pandas>=2.3.2",
    "pyiceberg[duckdb]>=0.9.1",
]
